@@ -13,6 +13,7 @@
 * Restructured event architecture to rely solely on delegation, both improving performance, and ease-of-use for dynamic forms
 * Moved documentation from inline to http://docs.jquery.com/Plugins/Validation - including interactive examples for all methods
 * Removed validator.refresh(), validation is now completey dynamic
+* Renamed minValue to min, maxValue to max and rangeValue to range, deprecating the previous names (to be removed in 1.3)
 
 1.1.2
 ---
